--- a/.config/polybar/colors.ini
+++ b/.config/polybar/colors.ini
@@ -8,6 +8,7 @@ background-1 = #3c3836
 background-2 = #504945
 background-3 = #665c54
 background-4 = #7c6f64
+background-5 = #928374
 
 foreground-0 = #fbf1c7
 foreground-1 = #ebdbb2
