--- a/.config/polybar/modules.old/modules/audio.ini
+++ b/.config/polybar/modules.old/modules/audio.ini
@@ -12,32 +12,28 @@ interval = 1
 
 format-volume           = <ramp-volume><label-volume>
 format-volume-overline  = ${gruvbox-dark.background}
-format-volume-underline = ${gruvbox-dark.normal-blue}
+format-volume-underline = ${gruvbox-dark.background}
 
 format-muted                   = <label-muted>
 format-muted-prefix            = 
 format-muted-prefix-background = ${gruvbox-dark.bright-red}
 format-muted-prefix-padding    = 1
 format-muted-overline          = ${gruvbox-dark.background}
-format-muted-underline         = ${gruvbox-dark.bright-red}
+format-muted-underline         = ${gruvbox-dark.background}
 
 label-volume            = %percentage%%
-label-volume-foreground = ${gruvbox-dark.foreground-2}
-label-volume-background = ${gruvbox-dark.background}
-label-volume-underline  = ${gruvbox-dark.normal-blue}
+label-volume-background = ${gruvbox-dark.background-1}
 label-volume-padding    = 1
 
 label-muted            = "Muted"
-label-muted-foreground = ${gruvbox-dark.bright-red}
-label-muted-background = ${gruvbox-dark.background}
-label-muted-underline  = ${gruvbox-dark.bright-red}
+label-muted-foreground = ${gruvbox-dark.foreground}
+label-muted-background = ${gruvbox-dark.background-1}
 label-muted-padding    = 1
 
 ramp-volume-0          = 
 ramp-volume-1          = 
 ramp-volume-2          = 
-ramp-volume-foreground = ${gruvbox-dark.foreground-2}
-ramp-volume-background = ${gruvbox-dark.background}
+ramp-volume-background = ${gruvbox-dark.background-1}
 ramp-volume-padding    = 1
 
 click-right = pavucontrol
