--- a/.config/polybar/modules.old/modules/date.ini
+++ b/.config/polybar/modules.old/modules/date.ini
@@ -13,7 +13,5 @@ format-overline  = ${gruvbox-dark.background}
 format-underline = ${gruvbox-dark.background}
 
 label = %time%
-label-foreground = ${gruvbox-dark.foreground-2}
-label-background = ${gruvbox-dark.background}
-label-underline  = ${gruvbox-dark.normal-green}
+label-background = ${gruvbox-dark.background-1}
 label-padding = 1
