--- a/.config/polybar/modules.old/modules/network.ini
+++ b/.config/polybar/modules.old/modules/network.ini
@@ -13,18 +13,14 @@ format-connected-overline  = ${gruvbox-dark.background}
 format-connected-underline = ${gruvbox-dark.background}
 
 label-connected            = "%{A1:nm-connection-editor:}%ifname%%netspeed:9%%{A}"
-label-connected-foreground = ${gruvbox-dark.foreground-2}
-label-connected-background = ${gruvbox-dark.background}
-label-connected-underline  = ${gruvbox-dark.normal-yellow}
+label-connected-background = ${gruvbox-dark.background-1}
 label-connected-padding    = 1
 
 format-disconnected-overline  = ${gruvbox-dark.background}
 format-disconnected-underline = ${gruvbox-dark.background}
 
 label-disconnected            = "%{A1:nm-connection-editor:}Offline%{A}"
-label-disconnected-foreground = ${gruvbox-dark.foreground-2}
-label-disconnected-background = ${gruvbox-dark.background}
-label-disconnected-underline  = ${gruvbox-dark.normal-yellow}
+label-disconnected-background = ${gruvbox-dark.background-1}
 label-disconnected-padding    = 1
 
 [module/wired-network]
