--- a/.config/polybar/modules.old/modules/window.ini
+++ b/.config/polybar/modules.old/modules/window.ini
@@ -4,11 +4,12 @@
 type = internal/xwindow
 
 format            = <label>
-format-padding    = 0
-format-foreground = ${gruvbox-dark.foreground-2}
+format-prefix     = 
+format-padding    = 4
+format-foreground = ${gruvbox-dark.foreground-0}
 format-background = ${gruvbox-dark.background}
 
 label        = " %title%"
 label-maxlen = 60
 
-label-empty = " Desktop"
+label-empty            = " Desktop"
