--- a/.config/polybar/modules/keyboard.ini
+++ b/.config/polybar/modules/keyboard.ini
@@ -8,15 +8,19 @@ blacklist-1 = scroll lock
 
 format                   = <label-layout><label-indicator>
 format-prefix            = 
-format-prefix-foreground = ${gruvbox-dark.foreground}
-format-prefix-background = ${gruvbox-dark.background-1}
+format-prefix-foreground = ${gruvbox-dark.foreground-2}
+format-prefix-background = ${gruvbox-dark.background}
 format-prefix-padding    = 1
 format-overline          = ${gruvbox-dark.background}
-format-underline         = ${gruvbox-dark.background}
+format-underline         = ${gruvbox-dark.normal-cyan}
 
 label-layout            = "%layout%"
-label-layout-background = ${gruvbox-dark.background-1}
+label-layout-foreground = ${gruvbox-dark.foreground-2}
+label-layout-background = ${gruvbox-dark.background}
+label-layout-underline  = ${gruvbox-dark.normal-cyan}
 label-layout-padding    = 1
 
 label-indicator-on            = "%name% "
-label-indicator-on-background = ${gruvbox-dark.background-1}
+label-indicator-on-foreground = ${gruvbox-dark.bright-cyan}
+label-indicator-on-background = ${gruvbox-dark.background}
+label-indicator-on-underline  = ${gruvbox-dark.normal-cyan}
