--- a/.config/polybar/modules/system.ini
+++ b/.config/polybar/modules/system.ini
@@ -1,10 +1,11 @@
 [module/sysmenu]
 type = custom/text
 
-content            = "  "
+content            = 
+content-padding    = 1
 content-background = ${gruvbox-dark.background-1}
-content-foreground = ${gruvbox-dark.bright-red}
-content-overline   = ${gruvbox-dark.background}
-content-underline  = ${gruvbox-dark.background}
+content-foreground = ${gruvbox-dark.normal-red}
+content-overline   = ${gruvbox-dark.background-1}
+content-underline  = ${gruvbox-dark.background-1}
 
-click-left = $HOME/.config/polybar/scripts/powermenu.sh &
+click-left = $HOME/.config/rofi/scripts/powermenu.sh &
