--- a/.config/polybar/modules/workspace.ini
+++ b/.config/polybar/modules/workspace.ini
@@ -1,7 +1,7 @@
 ;https://github.com/polybar/polybar/wiki/Module:-xworkspaces
 
 [module/workspaces]
-type = internal/xworkspaces
+type = internal/bspwm
 
 pin-workspaces = true
 
@@ -11,34 +11,31 @@ enable-scroll = true
 
 reverse-scroll = false
 
-icon-0       = 1;
-icon-1       = 2;
-icon-2       = 3;
-icon-3       = 4;
-icon-4       = 5;
-icon-default = 
+ws-icon-0 = 1;
+ws-icon-1 = 2;
+ws-icon-2 = 3;
+ws-icon-3 = 4;
+ws-icon-4 = 5;
+ws-icon-5 = 6;
+ws-icon-6 = 7;
+ws-icon-7 = 8;
+ws-icon-default = 
 
-format           = <label-state>
-format-overline  = ${gruvbox-dark.background}
-format-underline = ${gruvbox-dark.background}
+format = <label-state> <label-mode>
 
 label-monitor = %name%
 
-label-active            = %icon%
-label-active-foreground = ${gruvbox-dark.background}
-label-active-background = ${gruvbox-dark.normal-orange}
+label-active            = 
+label-active-foreground = ${gruvbox-dark.foreground-2}
 
 label-occupied            = %icon%
-label-occupied-foreground = ${gruvbox-dark.normal-orange}
-label-occupied-background = ${gruvbox-dark.background-2}
+label-occupied-foreground = ${gruvbox-dark.foreground-2}
 
 label-urgent            = %icon%
-label-urgent-foreground = ${gruvbox-dark.foreground}
-label-urgent-background = ${gruvbox-dark.bright-red}
+label-urgent-foreground = ${gruvbox-dark.normal-red}
 
 label-empty            = %icon%
-label-empty-foreground = ${gruvbox-dark.foreground}
-label-empty-background = ${gruvbox-dark.background-1}
+label-empty-foreground = ${gruvbox-dark.background-2}
 
 label-active-padding   = 1
 label-urgent-padding   = 1
