--- a/.config/polybar/modules/cpu.ini
+++ b/.config/polybar/modules/cpu.ini
@@ -8,11 +8,11 @@ interval = 1
 format                   = <label>
 format-prefix            = 
 format-prefix-foreground = ${gruvbox-dark.foreground-1}
-format-prefix-background = ${gruvbox-dark.background-1}
-format-prefix-padding    = 1
-format-overline          = ${gruvbox-dark.background}
-format-underline         = ${gruvbox-dark.background}
+format-prefix-background = ${gruvbox-dark.background}
+format-prefix-padding    = 0
+format-underline         = ${gruvbox-dark.normal-orange}
 
 label            = "%percentage%%"
-label-background = ${gruvbox-dark.background-1}
+label-background = ${gruvbox-dark.background}
+label-underline  = ${gruvbox-dark.normal-orange}
 label-padding    = 1
