--- a/.config/polybar/modules/memory.ini
+++ b/.config/polybar/modules/memory.ini
@@ -5,9 +5,9 @@ type = internal/memory
 
 interval = 1
 
-format-overline  = ${gruvbox-dark.background}
-format-underline = ${gruvbox-dark.background}
+format-underline = ${gruvbox-dark.normal-magenta}
 
 label            = "%gb_used%/%gb_free%"
-label-background = ${gruvbox-dark.background-1}
+label-background = ${gruvbox-dark.background}
+label-underline  = ${gruvbox-dark.normal-magenta}
 label-padding    = 1
