--- a/.config/polybar/modules/temperature.ini
+++ b/.config/polybar/modules/temperature.ini
@@ -14,17 +14,17 @@ warn-temperature = 65
 units = true
 
 format           = <label>
-format-overline  = ${gruvbox-dark.background}
-format-underline = ${gruvbox-dark.background}
+format-underline = ${gruvbox-dark.bright-red}
 
 format-warn           = <label-warn>
-format-warn-overline  = ${gruvbox-dark.background}
-format-warn-underline = ${gruvbox-dark.background}
+format-warn-underline = ${gruvbox-dark.bright-red}
 
 label            = %temperature-c%
-label-background = ${gruvbox-dark.background-1}
+label-background = ${gruvbox-dark.background}
+label-underline  = ${gruvbox-dark.normal-red}
 label-padding    = 1
 
 label-warn            = "%temperature-c%"
 label-warn-background = ${gruvbox-dark.bright-red}
+label-warn-underline  = ${gruvbox-dark.bright-red}
 label-warn-padding    = 1
